# django-telescope

./: .gitignore  LICENSE  METAPRODUCTIVITY.md  README.md  example_settings.py  opencode.json  pyproject.toml  server.json  test_query_model.py  test_server.py
fixtures/: README.md
fixtures/testproject/blog/: admin.py  models.py  views.py
fixtures/testproject/blog/migrations/: 0001_initial.py
fixtures/testproject/testproject/: __init__.py  settings.py  urls.py  wsgi.py
src/django_ai_boost/: server_fastmcp.py
src/django_mcp/: __init__.py  server_fastmcp.py
